--- a/css/style.css
+++ b/css/style.css
@@ -1512,3 +1512,133 @@ ol {
   position: relative;
   margin-bottom: 24px;
 }
+
+/* *ПОРТФОЛИО */
+
+.secpage-two {
+  padding: 96px 0 120px;
+}
+
+.buttons {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+  margin-bottom: 72px;
+}
+
+.buttons-li:not(:last-child) {
+  margin-right: 24px;
+}
+
+.filters {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--button-bg-color);
+  background-color: var(--filter-bg-color);
+  text-decoration: none;
+  cursor: pointer;
+  padding: 12px 24px;
+  border: 1px solid var(--filter-first-color);
+  border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.filters:hover,
+.filters:focus {
+  color: var(--primary-whte-color);
+  background-color: var(--filter-color);
+  border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.portfolio-cards {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+  row-gap: 48px;
+  column-gap: 24px;
+}
+
+.cards-li:nth-child(3n + 3) {
+  margin-right: 0;
+  padding-right: 0;
+}
+.cards-li {
+  width: calc((100% - 48px) / 3);
+  background-color: var(--primary-whte-color);
+}
+
+.cards-link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cards-link:hover,
+.cards-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.overlay-div {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay-card {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--filter-bg-color);
+  background-color: var(--button-bg-color);
+  padding: 40px 32px;
+
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cards-link:hover .overlay-card,
+.cards-link:focus .overlay-card {
+  transform: translateY(0%);
+}
+
+.cards-info {
+  padding: 32px 16px;
+  border: 1px solid var(--filter-first-color);
+  border-top: none;
+}
+
+.row-h {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--primary-color-tittle);
+  margin-bottom: 8px;
+}
+
+.row-p {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--secondary-color-tittle);
+}
