--- a/css/style.css
+++ b/css/style.css
@@ -124,11 +124,11 @@ ol {
 .site-nav.link:focus,
 .site-nav.current::after {
   color: var(--filter-color);
-  opacity: 1;
   bottom: -1px;
 }
 
 .adress-nav {
+  display: flex;
   align-items: center;
   justify-content: space-between;
 }
@@ -1208,6 +1208,7 @@ ol {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding-left: 16px;
+  opacity: 0.3;
 
   font-family: "Roboto";
   font-style: normal;
@@ -1227,6 +1228,7 @@ ol {
 @media screen and (min-width: 1158px) {
   .subscribe-input {
     width: 264px;
+    opacity: 1;
   }
 }
 
@@ -1295,6 +1297,15 @@ ol {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 427px) {
+  .modal {
+    width: calc(100% - 30px);
+    max-width: 392px;
+    min-height: 584;
+    padding: 72px 16px 24px;
+  }
 }
 
 .button-modal {
@@ -1641,4 +1652,158 @@ ol {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--secondary-color-tittle);
+}
+
+/** MOBILE MENU */
+
+.menu-mobile-open {
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-mobile-open {
+    display: none;
+  }
+}
+
+.mobile-svg-menu {
+  stroke: var(--primary-color-tittle);
+  background-color: transparent;
+  padding: 0;
+  line-height: 0;
+}
+
+.menu-mobile-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 1px solid rgba(46, 47, 66, 0.1);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  cursor: pointer;
+  transition: background-color 250ms var(--timing-function),
+    border 250ms var(--timing-function);
+}
+
+.svg-menu {
+  width: 8px;
+  height: 8px;
+  fill: var(--primary-color-tittle);
+}
+
+.mob-nav {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: var(--primary-color-tittle);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-nav.link:hover,
+.mob-nav.link:focus {
+  color: var(--filter-color);
+  opacity: 1;
+  bottom: -1px;
+}
+
+.mob-menu {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--primary-whte-color);
+  top: 0;
+  z-index: 1;
+  padding: 24px 24px 40px 40px;
+  visibility: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transform: translateX(150%);
+  transition: transform 250ms ease-in-out;
+}
+
+.mob-menu.is-open {
+  transform: translateX(0);
+}
+
+.mob-menu-ul {
+  padding-top: 32px;
+  gap: 40px;
+}
+
+.adres-mob-text {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: var(--button-bg-color);
+}
+.adres-mob-tel {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--secondary-color-tittle);
+}
+
+.mob-menu-item {
+  display: grid;
+  padding-top: 32px;
+  gap: 40px;
+}
+
+.mob-menu-adres {
+}
+
+.mob-menu-telmail {
+  padding-bottom: 40px;
+}
+
+.tel-style {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: var(--button-bg-color);
+}
+
+@media screen and (max-width: 427px) {
+  .tel-style {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    color: var(--button-bg-color);
+  }
+}
+
+.mail-style {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--secondary-color-tittle);
+}
+
+.mob-social-group {
+  display: flex;
+  justify-content: space-between;
 }
