--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ ol {
 }
 
 .overlay {
-  max-width: 428px;
+  max-width: 767px;
   height: 432px;
   margin-left: auto;
   margin-right: auto;
@@ -692,12 +692,26 @@ ol {
   background: var(--filter-bg-color);
 }
 
+@media screen and (max-width: 767px) {
+  .container > .team {
+    width: 264px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .padding-plus {
+    margin-bottom: 72px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .team {
     display: flex;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
+  }
+  .padding-plus {
+    margin-bottom: 0;
   }
 }
 
@@ -707,6 +721,9 @@ ol {
     margin: 0;
     padding: 0;
     background: var(--filter-bg-color);
+  }
+  .padding-plus {
+    margin-bottom: 0;
   }
 }
 
